[gd_scene load_steps=7 format=2]

[ext_resource path="res://Art/Top UI.png" type="Texture" id=1]
[ext_resource path="res://Scripts/top_ui.gd" type="Script" id=2]
[ext_resource path="res://Scripts/HBoxContainer.gd" type="Script" id=3]
[ext_resource path="res://Fonts/Comfortaa.tres" type="DynamicFont" id=4]
[ext_resource path="res://Fonts/Comfortaa-Bold.ttf" type="DynamicFontData" id=5]

[sub_resource type="DynamicFont" id=1]
size = 72
font_data = ExtResource( 5 )

[node name="top_ui" type="TextureRect"]
margin_right = 576.0
margin_bottom = 192.0
texture = ExtResource( 1 )
script = ExtResource( 2 )
three_star = 10
two_star = 20
one_star = 30

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 16.0
margin_top = 16.0
margin_right = -16.0
margin_bottom = -16.0

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
margin_right = 544.0
margin_bottom = 160.0
custom_constants/separation = 32
script = ExtResource( 3 )

[node name="StarLabel" type="Label" parent="MarginContainer/HBoxContainer"]
margin_right = 160.0
margin_bottom = 160.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 4 )
text = "000"
align = 1

[node name="TimerLabel" type="Label" parent="MarginContainer/HBoxContainer"]
margin_left = 192.0
margin_right = 352.0
margin_bottom = 160.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 1 )
text = "00"
align = 1
valign = 1

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/HBoxContainer"]
margin_left = 384.0
margin_right = 544.0
margin_bottom = 160.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="STimer" type="Timer" parent="MarginContainer/HBoxContainer"]

[node name="Timer" type="Timer" parent="."]
[connection signal="timeout" from="MarginContainer/HBoxContainer/STimer" to="." method="game_time"]
[connection signal="timeout" from="MarginContainer/HBoxContainer/STimer" to="MarginContainer/HBoxContainer" method="game_time"]
[connection signal="timeout" from="Timer" to="." method="game_timeout"]
